# stockAnalyze

./: CMakeLists.txt  README.md  completelineedit.cpp  completelineedit.h  dataCal.cpp  dataCal.h  frameless.h  image_info_show.cpp  image_line_show.cpp  image_line_show.h  image_widget.cpp  info_widget.cpp  login_dialog.cpp  login_dialog.h  login_dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  opstring.h  painter.cpp  painter.h  person_dialog.cpp  person_dialog_slot.cpp  qmake2cmake.py  quote_spi.cpp  quote_spi.h  qwebdata.cpp  qwebdata.h  register_dialog.cpp  register_dialog.ui  search_widget.cpp  selectstock_widget.cpp  selectstockwidget.cpp  stockAnalysis.pro  stockDataGet.cpp  stockDataGet.h  time.cpp  title_slots.cpp  title_widget.cpp  webgets.cpp
data/: config.json
src/: CMakeLists.txt  FileUtils.cpp  frameless.cpp  image_info_show.h  image_line_show.cpp  image_line_show.h  image_line_show.ui  imgrec.qrc  info_widget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mouse.cpp  option_widget.cpp  painter.cpp  painter.h  quote_spi.cpp  quote_spi.h  real_kline_work.cpp  real_kline_work.h  register_dialog.h  search_person_widget.cpp  search_widget.cpp  selectstockwidget.h  selectstockwidget.ui  stockDataGet.cpp  title_logo.cpp  title_menu.cpp  title_quitbox_widget.cpp  trade_spi.cpp
src/data_process/: dataCal.cpp  qwebdata.cpp  qwebdata.h  webgets.h
